--- a/Variables.html
+++ b/Variables.html
@@ -7,9 +7,13 @@
 </head>
 <body>
     <script>
-        var Name;
+        let Name;
         Name="Vaishali";
-        document.write(Name);
+        console.log(Name);
+
+        var Age;
+        Age=21;
+        console.log(Age);      
     </script>
 </body>
 </html>
