--- a/Variables.html
+++ b/Variables.html
@@ -13,7 +13,12 @@
 
         var Age;
         Age=21;
-        console.log(Age);      
+        console.log(Age);
+        
+        const name2="Payal";
+        const city="Solapur"
+        console.log(`My name is`,name2);
+        console.log(`I am from ${city}`);
     </script>
 </body>
 </html>
