--- a/Operators/assignment.html
+++ b/Operators/assignment.html
@@ -6,17 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Operators</title>
 </head>
-
 <body>
     <script>
-        let marks=500;
-        // marks += 50;
-        // marks -= 50;
-        // marks *= 2;
-        // marks /= 2;
-        // marks %= 3;
-        console.log(`Total Marks: ${marks}`);
+        let marks1=500;
+        console.log(`Total Marks: ${marks1}`);
+        marks1 += 50;
+        console.log(`Total Marks after adding 50: ${marks1}`);
+
+        let marks2 = 500;
+        marks2 -= 50;
+        console.log(`Total Marks after minus 50: ${marks2}`);
+
+        let marks3 = 500;
+        marks3 *= 2;
+        console.log(`Total Marks after multiply by 2: ${marks3}`);
+
+        let marks4 = 500;
+        marks4 /= 2;
+        console.log(`Total Marks after divide by 2: ${marks4}`);
+
+        let marks5=500;
+        marks5 %= 3;
+        console.log(`Total Marks after mod by 3: ${marks5}`);
     </script>
 </body>
-
 </html>
