--- a/Operators/increment-decrement.html
+++ b/Operators/increment-decrement.html
@@ -8,12 +8,14 @@
 <body>
     <script>
         // PreIncrement
+        console.log(`PreIncrement`)
         let result=5;
         console.log(`Before increment: ${result}`);
         ++result;
         console.log(`After increment: ${result}`);
 
         // PostIncrement
+        console.log(`PostIncrement`)
         let result2=10;
         console.log(`Before increment: ${result2}`);
         result2++;
@@ -21,12 +23,14 @@
 
 
          // PreDecrement
+         console.log(`PreDecrement`)
          let result3=5;
         console.log(`Before increment: ${result3}`);
         --result3;
         console.log(`After increment: ${result3}`);
 
         // PostDecrement
+        console.log(`PostDecrement`)
         let result4=10;
         console.log(`Before increment: ${result4}`);
         result4--;
