--- a/Operators/comparison.html
+++ b/Operators/comparison.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <script>
-        console.log(5<8);
-        console.log(8<8);
-        console.log(15<8);
-        console.log(5<=5);
-        console.log(5==5);
-        console.log(5==="5");
-        console.log(5>=8);
-        console.log(5!=8);
+        console.log(`5 is less than 8 = `,5<8);
+        console.log(`8 is less than 8 = `,8<8);
+        console.log(`15 is less than 8 = `,15<8);
+        console.log(`5 is less than or equals to 5 = `,5<=5);
+        console.log(`5 is equals to 5 = `,5==5);
+        console.log(`5 is equals string 5 = `,5==="5");
+        console.log(`5 is greater than or equals to 8 = `,5>=8);
+        console.log(`5 is not equals to 8 = `,5!=8);
     </script>
 </body>
 </html>
