Condition statements added

--- a/Condition Statements/if-else-ladder.html
+++ b/Condition Statements/if-else-ladder.html
@@ -7,7 +7,41 @@
 </head>
 <body>
     <script>
-        
+        const number = prompt(`Enter Number`)
+        if(number==1){
+            console.log(`Sunday`)
+        } else if(number==2){
+            console.log(`Monday`)
+        } else if(number==3){
+            console.log(`Tuesday`)
+        } else if(number==4){
+            console.log(`Wednesday`)
+        } else if(number==5){
+            console.log(`Thursday`)
+        } else if(number==6){
+            console.log(`Friday`)
+        } else if(number==7){
+            console.log(`Saturday`)
+        } else{
+            console.log(`Day Not Found`)
+        }
     </script>    
+
+    <!-- <script>
+        const per = prompt(`Enter Your Percentage`)
+        if(per>=50 && per<60){
+            console.log(`Grade E`)
+        } else if(per>=60 && per<70){
+            console.log(`Grade D`)
+        } else if(per>=70 && per<80){
+            console.log(`Grade C`)
+        } else if(per>=80 && per<90){
+            console.log(`Grade B`)
+        } else if(per>=90 && per<100){
+            console.log(`Grade A`)
+        } else{
+            console.log(`Fail`)
+        }
+    </script> -->
 </body>
 </html>
