--- a/Condition Statements/largest-number.html
+++ b/Condition Statements/largest-number.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        const num1 = prompt(`Enter 1st number`)
-        const num2 = prompt(`Enter 2nd number`)
+        const num1 = parseInt(prompt(`Enter 1st number`))
+        const num2 = parseInt(prompt(`Enter 2nd number`))
 
         console.log(`1st number is: ${num1}`)
         console.log(`2nd number is: ${num2}`)
