--- a/Condition Statements/switch.html
+++ b/Condition Statements/switch.html
@@ -31,6 +31,22 @@
                 document.write(`Five`);
                 break;
 
+            case 6:
+                document.write(`Six`);
+                break;
+
+            case 7:
+                document.write(`Seven`);
+                break;
+
+            case 8:
+                document.write(`Eight`);
+                break;
+
+            case 9:
+                document.write(`Nine`);
+                break;
+
             default:
                 document.write(`Invalid input`);
                 break;
