--- a/Condition Statements/switch.html
+++ b/Condition Statements/switch.html
@@ -9,8 +9,12 @@
 
 <body>
     <script>
-        const num = 3
+        const num = parseInt(prompt(`Enter Number`))
         switch (num) {
+            case 0:
+                document.write(`Zero`);
+                break;
+
             case 1:
                 document.write(`One`);
                 break;
